@startuml diagrama-cozinha
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
title Domínio: cozinha\n(Padrões: Command · Singleton)

' ── Command ────────────────────────────────────────────────────────────
interface Comando <<Command>> {
  + executar()
  + desfazer()
}

class Grelha <<Receiver>> {
  - ligada : boolean
  - temperatura : int
  --
  + ligar()
  + desligar()
  + isLigada() : boolean
  + getTemperatura() : int
}

class LigarGrelha   implements Comando { - grelha : Grelha }
class DesligarGrelha implements Comando { - grelha : Grelha }

LigarGrelha    --> Grelha
DesligarGrelha --> Grelha

class PainelCozinha <<Invoker>> {
  - historico : Deque<Comando>
  --
  + executar(cmd : Comando)
  + desfazerUltimo()
}
PainelCozinha --> Comando

' ── Singleton ──────────────────────────────────────────────────────────
class Cozinha <<Singleton>> {
  - {static} instancia : Cozinha
  - filaPedidos : List<String>
  --
  - Cozinha()
  + {static} getInstance() : Cozinha
  + receberPedido(pedido : Pedido)
  + getFilaPedidos() : List<String>
}

note right of Cozinha
  <b>Singleton</b> + participante do Mediator
  (recebe ordens da CentralAtendimento)
end note
@enduml
